--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-#ignore thumbnails created by windows
+# ignore thumbnails created by windows
 Thumbs.db
 #OSX/Linux Stuff
 *.DS_Store
 *.swp
 *.swo
-#Ignore files build by Visual Studio
+
+# ignore files build by Visual Studio
 *.obj
 *.exe
 !.nuget/Nuget.exe
@@ -63,3 +64,6 @@ samples/ReadMe/Provider.Tests/Properties/launchSettings.json
 samples/ReadMe/Provider/Properties/launchSettings.json
 
 .idea/
+
+# ignore contract files created by Pact
+**/pacts/
